[B]Version 1.1.108[/B]
- pornhoarder - fix search, studios, categories
- stripchat - fix listing
- noodlemagazine - fix playback
- fuxmovies - fix playback