@@ -3,3 +3,6 @@
 - stripchat - fix listing
 - noodlemagazine - fix playback
 - fuxmovies - fix playback
+- eroticage - fix playback
+- vintagetube - fix playback
+- goodporn - fix listing
